--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -17,6 +17,10 @@
 # layout properties
 
 # Properties that must be set to override the default locations
+#
+# Parent properties must be set. This usually means uncommenting
+# project.content-dir if any other property using it is uncommented
+
 #project.status=status.xml
 #project.content-dir=src/documentation
 #project.conf-dir=${project.content-dir}/conf
