--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -36,6 +36,16 @@
 
 
 ##############
+# Cocoon catalog entity resolver properties
+
+# A local catalog to supplement the default Forrest catalog
+#project.catalog=${project.schema-dir}/catalog
+
+# The verbosity level for the entity resolver (1..10)
+#forrest.catalog.verbosity=1
+
+
+##############
 # validation properties
 
 # These props determine if validation is performed at all
