Include the etc/ directory in binary distributions
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/branches/FORREST_02_BRANCH@7761 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -153,6 +153,7 @@
     <zip
       file="${dist.dir}/${release-name-bin}.zip" >
       <zipfileset dir="${dist-shbat.dir}" prefix="${release-name-bin}"/>
+      <zipfileset dir="etc"  prefix="${release-name-bin}/etc"/>
       <zipfileset dir="etc"  prefix="${release-name-bin}" includes="RELEASE-NOTES-${version}.txt"/>
     </zip>
     <tar longfile="gnu" compression="gzip"
@@ -170,6 +171,7 @@
         <include name="**/ant"/>
         <include name="**/forrest"/>
       </tarfileset>
+      <tarfileset prefix="${release-name-bin}/etc" dir="etc"/>
       <tarfileset prefix="${release-name-bin}" dir="etc" includes="RELEASE-NOTES-${version}.txt"/>
     </tar>
   </target>
