Hardcode the project name, because module.xml contains two possibilities
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7806 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -41,7 +41,7 @@
     <xmlproperty file="status.xml"     prefix="xstatus"  keeproot="false" collapseAttributes="true" />   
     <xmlproperty file="properties.xml"                   keeproot="false" collapseAttributes="true" />
 
-    <property name="name"                  value="${xgump.module.project.name}"/>
+    <property name="name"                  value="apache-forrest"/>
     <property name="packages"              value="${xgump.module.project.packages}"/>
     <property name="version"
       value="${xgump.module.project.version.major}.${xgump.module.project.version.minor}${xgump.module.project.version.tag}"/>
