Add special handling of links that start with 'file:'. These links are:  1) Not passed on to Cocoon (see filterlinks.xsl)  2) The 'file:' prefix is stripped from the HTML (see filterlinks-html.xsl)  3) All file: links encountered during crawling are recorded in a file,  'unprocessed-files.txt' (see filterlinks.xsl and linkutils.xsl)  4) After running Cocoon, forrest.build.xml copies all files listed in  unprocessed-files.txt to build/site/ manually.  This is achieved with a custom  selector, UncopiedFileSelector.java
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7838 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -66,6 +66,7 @@
     <path id="classpath">
       <fileset dir="src/scratchpad/lib" includes="**/*.jar"/>
       <fileset dir="lib" includes="**/*.jar"/>
+      <fileset dir="tools/ant/lib" includes="*.jar"/>
       <pathelement location="${tools.jar}"/>
     </path>
 
@@ -330,8 +331,27 @@
   <!-- =================================================================== -->
   <!-- Make the shell-bat distribution                                     -->
   <!-- =================================================================== -->
+
+  <target name="compile-shbat" depends="init">
+    <mkdir dir="${build.dir}/shbat/tasks-classes"/>
+    <javac srcdir=   "src/resources/forrest-shbat/tasks"
+      destdir=       "${build.dir}/shbat/tasks-classes"
+      debug=         "${build.compiler.debug}"
+      optimize=      "${build.compiler.optimize}"
+      deprecation=   "${build.compiler.deprecation}"
+      nowarn=        "${build.compiler.nowarn}"
+      classpathref=  "classpath">
+    </javac>
+  </target>
+
+  <target name="jar-shbat" depends="compile-shbat">
+    <jar destfile="${build.dir}/shbat/forrest-shbat-tasks.jar"
+      basedir="${build.dir}/shbat/tasks-classes"/>
+  </target>
+ 
+
   <target name="dist-shbat" 
-    depends="init, validate-config, fresh-site-zip, webapp-webinf, bare-context-dir" >
+    depends="init, validate-config, fresh-site-zip, webapp-webinf, bare-context-dir, jar-shbat" >
     <!-- TODO: decide on a better place to read/set this prop from/to -->
 
     <!-- fresh drop-off location for the distribution -->
@@ -345,8 +365,11 @@
 
     <!-- copy the prepared and wrapper stuff for the distribution -->
     <copy todir="${dist-shbat.dir}">
-      <fileset dir="./src/resources/forrest-shbat" />
+      <fileset dir="./src/resources/forrest-shbat">
+        <exclude name="tasks/**"/>
+      </fileset>
     </copy>
+    <copy file="${build.dir}/shbat/forrest-shbat-tasks.jar" todir="${dist-shbat.dir}/WEB-INF/lib" />
 
     <!-- copy licenses -->
     <copy todir="${dist-shbat.dir}/legal">
