Don't try to validate the site.xml file, which doesn't (and cannot) have a DTD.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/branches/LINKMAP_BRANCH@7872 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -72,7 +72,7 @@
 #forrest.validate.xdocs.failonerror=${forrest.validate.failonerror}
 #
 #forrest.validate.xdocs.includes=**/*.x*
-#forrest.validate.xdocs.excludes=
+#forrest.validate.xdocs.excludes=site.xml
 #
 #forrest.validate.skinconf.includes=${skinconf-file}
 #forrest.validate.skinconf.excludes=
