clean target needs to depend from init otherwise ${build.dir} is not set we should be able to rely on ./build.sh clean again.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7941 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -72,7 +72,7 @@
     <mkdir dir="${build.dir}"/>
   </target>
 
-  <target name="clean" description="Delete all generated files">
+  <target name="clean" depends="init" description="Delete all generated files">
     <delete dir="${build.dir}"/>
   </target>
 
