--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -11,6 +11,8 @@
 # Specifies name of Forrest skin to use
 #project.skin=forrest-site
 #project.skin=avalon-tigris
+#project.skin=avalon-tigris
+#project.skin=krysalis-site
 
 
 ##############
