Fix build to use new skinconf.rnc
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7955 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -302,7 +302,7 @@
     </taskdef>
     <!-- skinconf.xml -->
     <echo message="validating **/skinconf.xml ..."/>
-    <jing rngfile="./src/resources/schema/relaxng/skinconf-v10.rng">
+    <jing compactSyntax="true" rngfile="./src/resources/schema/relaxng/skinconf.rnc">
       <fileset dir="./src/resources" includes="**/skinconf.xml"/>
     </jing>
     <!-- All stylesheets **/*.xsl -->
