Don't put temporary files (destined for build/dist/shbat/WEB-INF) into the webapp directory, as this causes conflicts.  Eg, before this fix, running 'ant ; forrest webapp ; ant' would effectively hardcode the skin for all subsequent 'forrest' runs.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7960 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -202,10 +202,11 @@
 
   <!-- =================================================================== -->
   <!-- Make the WEB-INF directory like cocoon (CLI or webapp) needs it     -->
+  <!-- Note that @tokens@ in config files will be unexpanded.              -->
   <!-- =================================================================== -->
   <target name="webapp-webinf" depends="init, scratchpad.jar" >
     <!-- TODO: decide on a better place to read/set this prop from/to -->
-    <property name="webapp.webinf.dir" value="./build/webapp/WEB-INF" />
+    <property name="webapp.webinf.dir" value="./build/WEB-INF" />
 
     <mkdir dir="${webapp.webinf.dir}" />
     <copy todir="${webapp.webinf.dir}" >
