Compile components from src/java/components/
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7971 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -47,8 +47,9 @@
       value="${xgump.module.project.version.major}.${xgump.module.project.version.minor}${xgump.module.project.version.tag}"/>
 
     <property name="resource.dir"          location="src/resources"/>
+    <property name="java.dir"          location="src/java"/>
     <property name="scratchpad.src.dir"    location="src/scratchpad/src/java"/>
-    <property name="components.src.dir"    location="${resource.dir}/components"/>
+    <property name="components.src.dir"    location="${java.dir}/components"/>
     <property name="build.dir"             location="build"/>
     <property name="build.docs"            location="build/docs"/>
    <!--
