Rename the process of committing to xml-site/targets/* from 'update' to 'publish'.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7990 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/webapp/WEB-INF/users.properties
+++ b/src/resources/forrestbot/webapp/WEB-INF/users.properties
@@ -1,3 +1,3 @@
 # This file lists users known to the system, and associated 'privileges'.
-forrest-dev=refresh,xml-forrest,xml-forrest-template,xml-site,incubator-site,xml-xindice,xml-fop.xml,krysalis-centipede
+forrest-dev=refresh,publish,xml-forrest,xml-forrest-template,xml-site,incubator-site,xml-xindice,xml-fop.xml,krysalis-centipede
 forrest-dev.password=forrest-dev
