Document the format a bit
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7993 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/webapp/WEB-INF/users.properties
+++ b/src/resources/forrestbot/webapp/WEB-INF/users.properties
@@ -1,3 +1,18 @@
 # This file lists users known to the system, and associated 'privileges'.
+# The format is:
+#
+# <username>=<permitted actions>,<modules>
+# <username>.password=<password for 'username'>
+#
+# Where:
+#   <username> is something like 'admin', 'joe', 'forrest-dev'
+#   <permitted actions> is 'refresh' and/or 'publish', separated by commas.
+#     - 'refresh' means "able to trigger a refresh of a local
+#       forrestbot-generated site"
+#     - 'publish' means "able to trigger a commit of the generated output to
+#       Apache's xml-site module
+#   <modules> is a comma-separated list of modules (corresponding to
+#   ../../samples/<module>-cvs.xml files)
+
 forrest-dev=refresh,publish,xml-forrest,xml-forrest-template,xml-site,incubator-site,xml-xindice,xml-fop.xml,krysalis-centipede
 forrest-dev.password=forrest-dev
