Add swf to MIME types
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8083 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/conf/web.xml
+++ b/src/resources/conf/web.xml
@@ -252,5 +252,10 @@
     <extension>css</extension>
     <mime-type>text/css</mime-type>
   </mime-mapping>
+ 
+  <mime-mapping>
+    <extension>swf</extension>
+    <mime-type>application/x-shockwave-flash</mime-type>
+  </mime-mapping>
 
 </web-app>
