Update module list
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8131 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/webapp/WEB-INF/users.properties
+++ b/src/resources/forrestbot/webapp/WEB-INF/users.properties
@@ -14,5 +14,5 @@
 #   <modules> is a comma-separated list of modules (corresponding to
 #   ../../samples/<module>-cvs.xml files)
 
-forrest-dev=refresh,publish,xml-forrest,xml-forrest-template,xml-site,incubator-site,xml-xindice,xml-fop.xml,krysalis-centipede
+forrest-dev=refresh,xml-forrest,xml-forrest-krysalis,xml-forrest-template,xml-site,incubator-site,xml-xindice,xml-fop.xml,avalon-site,krysalis-centipede,ws-site
 forrest-dev.password=forrest-dev
