--- a/build.xml
+++ b/build.xml
@@ -475,11 +475,27 @@
   <target name="forrestbar" depends="init">
     <mkdir dir="${build.dir}" />
     <mkdir dir="${build.dir}/work/forrestbar" />
+    <mkdir dir="${build.dir}/work/forrestbar-jar" />
+    <copy todir="${build.dir}/work/forrestbar-jar" overwrite="true">
+      <fileset dir="src/resources/forrestbar" 
+               includes="content/**/*.xul" />
+      <filterset>
+        <filter token="EMBEDDED_NAME" value="${forrestbot.links.forrest.local-embedded.name}"/>
+        <filter token="EMBEDDED_URL" value="${forrestbot.links.forrest.local-embedded.url}"/> 
+        <filter token="WEBAPP_NAME" value="${forrestbot.links.forrest.local-webapp.name}"/>
+        <filter token="WEBAPP_URL" value="${forrestbot.links.forrest.local-webapp.url}"/> 
+      </filterset>
+    </copy>
+    <copy todir="${build.dir}/work/forrestbar-jar" overwrite="true">
+      <fileset dir="src/resources/forrestbar" 
+               excludes="content/**/*.xul" />
+    </copy>
     <jar jarfile="${build.dir}/work/forrestbar/forrestbar.jar">
-      <fileset dir="src/resources/forrestbar" includes="content/**/*" />
+      <fileset dir="${build.dir}/work/forrestbar-jar" includes="content/**/*" />
     </jar>
     <copy file="src/resources/forrestbar/install.js" 
-      todir="${build.dir}/work/forrestbar" overwrite="true" />
+          todir="${build.dir}/work/forrestbar" overwrite="true">
+    </copy>
     <zip zipfile="${build.dir}/forrestbar.xpi" 
       basedir="${build.dir}/work/forrestbar" />
   </target>
