Clarify that it is a file and not a directory.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8174 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -39,7 +39,7 @@
 ##############
 # Cocoon catalog entity resolver properties
 
-# A local catalog to supplement the default Forrest catalog
+# A local OASIS catalog file to supplement the default Forrest catalog
 #project.catalog=${project.schema-dir}/catalog
 
 # The verbosity level for the entity resolver (1..10)
