Support new broken-up sitemap
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8187 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -215,7 +215,7 @@
     <mkdir dir="${webapp.webinf.dir}" />
     <copy todir="${webapp.webinf.dir}" >
       <fileset dir="${resource.dir}/conf" >
-        <exclude name="sitemap.xmap" />
+        <exclude name="*.xmap" />
         <exclude name="skinconf.xml" />
       </fileset>
     </copy>
@@ -270,7 +270,7 @@
     <!-- Copy Cocoon configuration and sitemap -->
     <copy todir="${bare-context.dir}">
       <fileset dir="${resource.dir}/conf">
-        <include name="sitemap.xmap"/>
+        <include name="*.xmap"/>
         <include name="skinconf.xml"/>
         <include name="jettyconf.xml"/>
       </fileset>
@@ -320,7 +320,7 @@
     <!-- sitemap.xmap -->
     <echo message="validating **/sitemap.xmap ..."/>
     <jing rngfile="./src/resources/schema/relaxng/sitemap-v06.rng">
-      <fileset dir="./src/resources" includes="**/sitemap.xmap"/>
+      <fileset dir="./src/resources/conf" includes="*.xmap"/>
       <fileset dir="./src/resources/editor" includes="editor.xmap"/>
     </jing>
     <!-- book.xml -->
