--- a/src/resources/conf/web.xml
+++ b/src/resources/conf/web.xml
@@ -117,7 +117,8 @@
         com.ibm.servlet.classloader.Handler -->
 
         <!-- For Database Driver: -->
-        org.hsqldb.jdbcDriver
+        <!--
+        org.hsqldb.jdbcDriver -->
 
         <!-- For PostgeSQL Database: 
              org.postgresql.Driver -->
