Move stylesheets from library/xslt/ to stylesheets/.  This makes the structure more consistent, and allows users to override these files (particularly filterlinks.xsl) in src/documentation/resources/stylesheets/
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8214 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -276,9 +276,9 @@
       </fileset>
     </copy>
 
-    <!-- Copy libraries -->
-    <copy todir="${bare-context.dir}/library/" >
-      <fileset dir="${resource.dir}/library" />
+    <!-- Copy stylesheets -->
+    <copy todir="${bare-context.dir}/resources/stylesheets" >
+      <fileset dir="${resource.dir}/stylesheets" />
     </copy>
 
     <!-- Copy editor -->
