Clarify some text comments. Sync as much as possible with same file in Cocoon.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8220 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/schema/CatalogManager.properties
+++ b/src/resources/schema/CatalogManager.properties
@@ -4,10 +4,8 @@
 # configuration of application-specific catalogs. You can also use cocoon.xconf
 # to over-ride or supplement these settings.
 #
-# Apache Forrest will automatically load a default OASIS catalog from
-#  src/resources/schema/catalog
-#
-# See the Apache Cocoon documentation (catalog.html).
+# See the Apache Cocoon documentation
+# http://cocoon.apache.org/userdocs/concepts/catalog.html
 
 # verbosity ... level of messages for status/debug (messages go to STDOUT)
 # The following messages are provided ...
@@ -22,6 +20,8 @@
 verbosity=1
 
 # catalogs ... list of additional catalogs to load
+#  Note that Apache Forrest will automatically load its own default catalog
+#  from src/resources/schema/catalog
 # use full pathnames
 # pathname separator is always semi-colon (;) regardless of operating system
 # directory separator is always slash (/) regardless of operating system
