--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -40,7 +40,7 @@
 # Cocoon catalog entity resolver properties
 
 # A local OASIS catalog file to supplement the default Forrest catalog
-#project.catalog=${project.schema-dir}/catalog
+#project.catalog=${project.schema-dir}/catalog.xcat
 
 # The verbosity level for the entity resolver (1..10)
 #forrest.catalog.verbosity=1
