Fix some obsolete refs from ${project.sitemap} to ${project.sitemap-dir}
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8295 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -25,7 +25,7 @@
 #project.status=status.xml
 #project.content-dir=src/documentation
 #project.conf-dir=${project.content-dir}/conf
-#project.sitemap=${project.content-dir}/sitemap.xmap
+#project.sitemap-dir=${project.content-dir}
 #project.xdocs-dir=${project.content-dir}/content/xdocs
 #project.stylesheets-dir=${project.content-dir}/resources/stylesheets
 #project.images-dir=${project.content-dir}/resources/images
