--- a/build.xml
+++ b/build.xml
@@ -505,8 +505,12 @@
   <!--        Target used by Gump         -->
   <!-- ================================== -->
   <target  name="gump" description="Target used by Gump">
-    <antcall target="site"/>
-    <antcall target="webapp"/>
+    <antcall target="site">
+      <param name="build.sysclasspath" value="only"/>
+    </antcall>
+    <antcall target="webapp">
+      <param name="build.sysclasspath" value="only"/>
+    </antcall>
   </target>
 
 
