trying to live up to Sam's expectations - now, I need to learn about Gump dependencies and the like.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8298 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -505,12 +505,12 @@
   <!--        Target used by Gump         -->
   <!-- ================================== -->
   <target  name="gump" description="Target used by Gump">
-    <antcall target="site">
-      <param name="build.sysclasspath" value="only"/>
-    </antcall>
-    <antcall target="webapp">
-      <param name="build.sysclasspath" value="only"/>
-    </antcall>
+    <ant target="site">
+      <property name="build.sysclasspath" value="only"/>
+    </ant>
+    <ant target="webapp">
+      <property name="build.sysclasspath" value="only"/>
+    </ant>
   </target>
 
 
