Reverted my stupid thinking and trying to follow the path of enlightenment Stefan is providing me with.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8299 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -505,12 +505,8 @@
   <!--        Target used by Gump         -->
   <!-- ================================== -->
   <target  name="gump" description="Target used by Gump">
-    <ant target="site">
-      <property name="build.sysclasspath" value="only"/>
-    </ant>
-    <ant target="webapp">
-      <property name="build.sysclasspath" value="only"/>
-    </ant>
+    <antcall target="site"/>
+    <antcall target="webapp"/>
   </target>
 
 
