Wiki syntax should now work
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8326 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -267,6 +267,12 @@
       <fileset dir="${resource.dir}/images"/>
     </copy>
 
+    <!-- Copy Chaperon grammars -->
+    <copy todir="${bare-context.dir}/resources/grammars" >
+      <fileset dir="${resource.dir}/grammars"/>
+    </copy>
+
+
     <!-- Copy Cocoon configuration and sitemap -->
     <copy todir="${bare-context.dir}">
       <fileset dir="${resource.dir}/conf">
