Added a forrest.maxmemory property specifying the maximum amount of memory allocated to the JVM.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8340 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -94,3 +94,13 @@
 #forrest.validate.skins.stylesheets.includes=**/*.xsl
 #forrest.validate.skins.stylesheets.excludes=
 #forrest.validate.skins.stylesheets.failonerror=${forrest.validate.skins.failonerror}
+
+##############
+# General Forrest properties
+
+# The URL to start crawling from
+#project.start-uri=index.html
+# Set logging level for messages printed to the console
+#project.debuglevel=ERROR
+# Max memory to allocate to Java
+# forrest.maxmemory=64m
