--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -103,4 +103,7 @@
 # Set logging level for messages printed to the console
 #project.debuglevel=ERROR
 # Max memory to allocate to Java
-# forrest.maxmemory=64m
+#forrest.maxmemory=64m
+# Any other arguments to pass to the JVM. For example, to run on an X-less
+# server, set to -Djava.awt.headless=true
+#forrest.jvmargs=
