Get rid of those annoying "New Logger created and returned" log messages on startup.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8465 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/conf/web.xml
+++ b/src/resources/conf/web.xml
@@ -92,7 +92,7 @@
     -->
     <init-param>
       <param-name>log-level</param-name>
-      <param-value>DEBUG</param-value>
+      <param-value>WARN</param-value>
     </init-param>
 
     <!--
