Define ${project.resources-dir}, and copy across all content into the webapp. The idea is to allow resource files (eg. XML lookup files) which are made available to the XSLTs.  Conceptually, this is where skinconf.xml belongs.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8467 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -27,9 +27,10 @@
 #project.conf-dir=${project.content-dir}/conf
 #project.sitemap-dir=${project.content-dir}
 #project.xdocs-dir=${project.content-dir}/content/xdocs
-#project.stylesheets-dir=${project.content-dir}/resources/stylesheets
-#project.images-dir=${project.content-dir}/resources/images
-#project.schema-dir=${project.content-dir}/resources/schema
+#project.resources-dir=${project.content-dir}/resources
+#project.stylesheets-dir=${project.resources-dir}/stylesheets
+#project.images-dir=${project.resources-dir}/images
+#project.schema-dir=${project.resources-dir}/schema
 #project.skins-dir=${project.content-dir}/skins
 #project.skinconf=${project.content-dir}/skinconf.xml
 #project.lib-dir=${project.content-dir}/lib
