- Move all menu pipelines into menu.xmap.  Previously they were split between   linkmap-*.xmap (site.xml-derived stuff) and navigation.xmap. - Parametrized the menu creation algorithm in forrest.properties.  Previously,   users had to edit sitemap.xmap and delegate to either linkmap.xmap or   linkmap-tabs.xmap.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8497 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -15,6 +15,11 @@
 
 
 ##############
+# behavioural properties
+#project.menu-scheme=tab_attributes
+#project.menu-scheme=directories
+
+##############
 # layout properties
 
 # Properties that must be set to override the default locations
