--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -10,6 +10,7 @@
 
 # Specifies name of Forrest skin to use
 #project.skin=forrest-site
+#project.skin=forrest-css
 #project.skin=avalon-tigris
 #project.skin=krysalis-site
 
