Clear MIME-types-to-munge-URLs-for list
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8508 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -235,6 +235,10 @@
       -->
     </copy>
 
+    <!-- Temporary hack to stop Cocoon rewriting extensions -->
+    <mkdir dir="${webapp.webinf.dir}/classes/org/apache/cocoon/util"/>
+    <touch file="${webapp.webinf.dir}/classes/org/apache/cocoon/util/mime.types"/>
+
     <mkdir dir="${webapp.webinf.dir}/lib"/>
     <copy todir="${webapp.webinf.dir}/lib">
       <!--
