Add exclude for webdav, which depends on slide
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8549 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/local.blocks.properties
+++ b/etc/cocoon_upgrade/local.blocks.properties
@@ -62,6 +62,7 @@ exclude.block.mail=true
 exclude.block.axis=true
 exclude.block.portal=true
 exclude.block.woody=true
+exclude.block.webdav=true
 exclude.block.qdox=true
 #exclude.block.stx=true
 exclude.block.linotype=true
