<action dev="NKB" type="fix" context="sitemap">         ihtml now works again. Had to add a jtidy configuration that prevented it to output         tidies html to the pipeline, thus making the stylesheet unusable. Also had to fix         the sitemap schema.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8583 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -283,6 +283,7 @@
         <include name="*.xmap"/>
         <include name="skinconf.xml"/>
         <include name="jettyconf.xml"/>
+        <include name="jtidy.properties"/>
       </fileset>
     </copy>
 
