--- a/etc/cocoon_upgrade/local.blocks.properties
+++ b/etc/cocoon_upgrade/local.blocks.properties
@@ -16,53 +16,59 @@
 # developers are committed to back compatibility. In short, stuff you can
 # depend on.
 
-#exclude.block.fop=true
+exclude.block.authentication-fw=true
 #exclude.block.batik=true
+exclude.block.bsf=true
 #exclude.block.chaperon=true
+exclude.block.databases=true
+exclude.block.deli=true
+#exclude.block.fop=true
+exclude.block.hsqldb=true
+#exclude.block.html=true
 exclude.block.itext=true
 exclude.block.jfor=true
-exclude.block.swf=true
-exclude.block.session-fw=true
-exclude.block.authentication-fw=true
-exclude.block.portal-fw=true
-exclude.block.databases=true
-exclude.block.hsqldb=true
-exclude.block.poi=true
-exclude.block.naming=true
 exclude.block.jsp=true
-exclude.block.php=true
-exclude.block.python=true
-exclude.block.lucene=true
-#exclude.block.html=true
+exclude.block.jxforms=true
 #exclude.block.linkrewriter=true
-exclude.block.bsf=true
+exclude.block.lucene=true
+exclude.block.naming=true
+exclude.block.php=true
+exclude.block.poi=true
+exclude.block.portal-fw=true
 #exclude.block.profiler=true
+exclude.block.python=true
+exclude.block.session-fw=true
+exclude.block.slide=true
+exclude.block.swf=true
 exclude.block.velocity=true
 exclude.block.web3=true
-exclude.block.slide=true
-exclude.block.taglib=true
 exclude.block.xmldb=true
-exclude.block.deli=true
 exclude.block.xmlform=true
+
 
 # Unstable blocks --------------------------------------------------------------
 
 # unstable blocks are currently under development and do not guarantee the
 # contracts they expose (API, xml schema, properties, behavior) will remain 
 # constant in time. Developers are not committed to back-compatibility just yet.
-# This doesn't necessarely mean the blocks implementation is unstable or 
+# This doesn't necessarily mean the blocks implementation is unstable or 
 # the code can't be trusted for production, but use with care and watch
 # its development as thing might change over time before they are marked
 # stable.
 
-exclude.block.proxy=true
+exclude.block.apples=true
 #exclude.block.asciiart=true
-exclude.block.precept=true
-exclude.block.mail=true
 exclude.block.axis=true
-exclude.block.portal=true
-exclude.block.woody=true
-exclude.block.webdav=true
-exclude.block.qdox=true
-#exclude.block.stx=true
+exclude.block.eventcache=true
 exclude.block.linotype=true
+exclude.block.mail=true
+exclude.block.qdox=true
+exclude.block.petstore=true
+exclude.block.precept=true
+exclude.block.proxy=true
+exclude.block.portal=true
+exclude.block.slop=true
+exclude.block.stx=true
+exclude.block.taglib=true
+exclude.block.webdav=true
+exclude.block.woody=true
